feat： 原生高德地图

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- <script type="text/javascript">
+      window._AMapSecurityConfig = {
+        securityJsCode:"ad3404d57c80c6fe9c78891d30228a86",
+      }
+    </script>
+    <script src="https://webapi.amap.com/loader.js"></script>
+    <script type="text/javascript" >
+      AMapLoader.load({
+        key: "234b1e1d2207058b4e0d15ed5f5a7154",       // 申请好的Web端开发者Key，首次调用 load 时必填
+        version: "2.0",                 // 指定要加载的 JSAPI 的版本，缺省时默认为 1.4.15
+      })
+    </script>  -->
+
+    <script src="https://webapi.amap.com/maps?v=2.0&key=80d3042c3851a5dc16a89dfccc1efa4e&plugin=Map3D,AMap.DistrictLayer,AMap.Scale,AMap.ToolBar,AMap.MarkerClusterer"></script>
+    <script src="https://a.amap.com/Loca/static/mock/adcodes.js"></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
