--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,9 @@
       })
     </script>  -->
 
-    <script src="https://webapi.amap.com/maps?v=2.0&key=234b1e1d2207058b4e0d15ed5f5a7154&plugin=Map3D,AMap.DistrictLayer,AMap.Scale,AMap.ToolBar,AMap.MarkerClusterer"></script>
-    <script src="https://a.amap.com/Loca/static/mock/adcodes.js"></script>
+    <!-- 原生地图用到 -->
+    <!-- <script src="https://webapi.amap.com/maps?v=2.0&key=234b1e1d2207058b4e0d15ed5f5a7154&plugin=Map3D,AMap.DistrictLayer,AMap.Scale,AMap.ToolBar,AMap.MarkerClusterer"></script>
+    <script src="https://a.amap.com/Loca/static/mock/adcodes.js"></script> -->
     
   </head>
   <body>
