--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>质量验证数字化展示</title>
     <!-- <script src="//webapi.amap.com/maps?v=1.4.15&key=f97efc35164149d0c0f299e7a8adb3d2&plugin=AMap.Geocoder,AMap.GraspRoad,AMap.MarkerClusterer,AMap.Autocomplete,AMap.RangingTool"></script> -->
     
     <!-- <script type="text/javascript">
